kubernetes/apps/openproject/openproject/app/service-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openproject-postgres
spec:
  selector:
    app: openproject-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
