kubernetes/apps/openproject/openproject/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openproject
spec:
  selector:
    app: openproject
  ports:
    - name: http
      port: 80
      targetPort: http
