kubernetes/apps/openproject/openproject/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openproject
  namespace: openproject
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - openproject.meowsik.com
  rules:
    - backendRefs:
        - name: openproject
          port: 80
